--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <a href="#why-us">Why Us</a>
             </div>
             <div class="nav-actions">
-                <a href="#" class="btn btn-secondary">Log In</a>
-                <a href="#" class="btn btn-primary">Join Now</a>
+                <a href="login.html" class="btn btn-secondary">Log In</a>
+                <a href="register.html" class="btn btn-primary">Join Now</a>
             </div>
             <button class="mobile-menu-btn"><i class="fa-solid fa-bars"></i></button>
         </div>
@@ -52,9 +52,10 @@
                 <p class="hero-subtitle">Sri Lanka’s Smart Freelance Ecosystem. <br>Connect with top talent or ignite
                     your business with our premium in-house teams.</p>
                 <div class="hero-actions">
-                    <a href="#" class="btn btn-primary btn-lg">Find Freelancers <i
+                    <a href="find-freelancer.html" class="btn btn-primary btn-lg">Find Freelancers <i
                             class="fa-solid fa-magnifying-glass"></i></a>
-                    <a href="#" class="btn btn-outline btn-lg">Post a Job <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="post-job.html" class="btn btn-outline btn-lg">Post a Job <i
+                            class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
                 <div class="hero-stats glass-panel">
@@ -101,7 +102,8 @@
                         <li><i class="fa-solid fa-check"></i> Secure escrow payments</li>
                         <li><i class="fa-solid fa-check"></i> AI-powered matching</li>
                     </ul>
-                    <a href="#" class="learn-more">Find Talent <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="find-freelancer.html" class="learn-more">Find Talent <i
+                            class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Managed Projects -->
@@ -116,7 +118,7 @@
                         <li><i class="fa-solid fa-check"></i> Vetted expert teams</li>
                         <li><i class="fa-solid fa-check"></i> Fixed pricing & guarantees</li>
                     </ul>
-                    <a href="#" class="learn-more">Start Project <i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="post-job.html" class="learn-more">Start Project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Startup Solutions -->
@@ -207,12 +209,12 @@
             <div class="cta-box client-box glass-card">
                 <h3>For Clients</h3>
                 <p>Hire faster, safer, and smarter with our vetted network.</p>
-                <a href="#" class="btn btn-secondary">Hire Talent</a>
+                <a href="find-freelancer.html" class="btn btn-secondary">Hire Talent</a>
             </div>
             <div class="cta-box freelancer-box glass-card">
                 <h3>For Freelancers</h3>
                 <p>Earn, grow, and scale your career with premium projects.</p>
-                <a href="#" class="btn btn-primary">Join as Expert</a>
+                <a href="register.html" class="btn btn-primary">Join as Expert</a>
             </div>
         </div>
 
@@ -283,37 +285,78 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <div class="container footer-container">
-                <div class="footer-brand">
-                    <a href="#" class="logo">Nutzy Craft</a>
-                    <p>Building Sri Lanka’s First Freelance Super Platform.</p>
+            <div class="container">
+                <div class="footer-grid">
+                    <!-- About Us -->
+                    <div class="footer-col">
+                        <h3 class="footer-heading">ABOUT US</h3>
+                        <div class="footer-line"></div>
+                        <p class="footer-text">
+                            Separated by distance but connected by vision, Nutzy Craft stands at the frontier of digital
+                            innovation.
+                            <br><br>
+                            We do not just observe the changing tides of technology; we are the current. In this large
+                            ocean of freelance challenges, we build the bridges of code and design that ensure no idea
+                            goes unrealized.
+                        </p>
+                    </div>
+
+                    <!-- Our Services -->
+                    <div class="footer-col">
+                        <h3 class="footer-heading">OUR SERVICES</h3>
+                        <div class="footer-line"></div>
+                        <ul class="footer-service-list">
+                            <li><a href="#">Web Design & UI/UX</a></li>
+                            <li><a href="#">Custom Development</a></li>
+                            <li><a href="#">E-Commerce Solutions</a></li>
+                            <li><a href="#">Cloud Infrastructure</a></li>
+                            <li><a href="#">Brand Strategy</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Get Connected -->
+                    <div class="footer-col">
+                        <h3 class="footer-heading">GET CONNECTED</h3>
+                        <div class="footer-line"></div>
+                        <ul class="footer-contact-list">
+                            <li>
+                                <div class="contact-icon"><i class="fa-solid fa-phone"></i></div>
+                                <span>+94 78 212 7717</span>
+                            </li>
+                            <li>
+                                <div class="contact-icon"><i class="fa-solid fa-envelope"></i></div>
+                                <span>nutzycraft@gmail.com</span>
+                            </li>
+                            <li class="social-item">
+                                <a href="https://www.facebook.com/share/1ZJZodYPV1/?mibextid=wwXIfr" target="_blank">
+                                    <div class="contact-icon"><i class="fa-brands fa-facebook"></i></div>
+                                    <span>Facebook</span>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="https://www.instagram.com/nutzycraft?igsh=eXg3YWRmdWplMTcw&utm_source=qr" target="_blank">
+                                    <div class="contact-icon"><i class="fa-brands fa-instagram"></i></div>
+                                    <span>Instagram</span>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="https://www.linkedin.com/company/nutzycraft/" target="_blank">
+                                    <div class="contact-icon"><i class="fa-brands fa-linkedin"></i></div>
+                                    <span>LinkeDin</span>
+                                </a>
+                            </li>
+                            <li class="social-item">
+                                <a href="https://whatsapp.com/channel/0029Vb7MY8P8V0tf5Oi2zA2C" target="_blank">
+                                    <div class="contact-icon"><i class="fa-brands fa-whatsapp"></i></div>
+                                    <span>Whatsapp</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer-links">
-                    <div class="link-group">
-                        <h5>Company</h5>
-                        <a href="#">About</a>
-                        <a href="#">Careers</a>
-                        <a href="#">Contact</a>
-                    </div>
-                    <div class="link-group">
-                        <h5>Services</h5>
-                        <a href="#">Marketplace</a>
-                        <a href="#">Managed Teams</a>
-                        <a href="#">Startup Solutions</a>
-                    </div>
-                    <div class="link-group">
-                        <h5>Legal</h5>
-                        <a href="#">Privacy</a>
-                        <a href="#">Terms</a>
-                    </div>
-                </div>
+
                 <div class="footer-bottom">
-                    <p>&copy; 2024 Nutzy Craft. All rights reserved.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
+                    <p>Copyright © 2025 All rights reserved by Nutzy Craft</p>
                 </div>
             </div>
         </footer>
