--- a/admin-login.html
+++ b/admin-login.html
@@ -194,7 +194,7 @@
             const password = document.getElementById('password').value;
 
             if (email === 'admin@nutzy.com' && password === 'admin123') {
-                window.location.href = 'admin-dashboard.html';
+                window.location.href = 'admin-verify.html';
             } else {
                 alert('Invalid Admin Credentials! Try admin@nutzy.com / admin123');
             }
