--- a/client-job-proposals.html
+++ b/client-job-proposals.html
@@ -142,7 +142,7 @@
 
                     <div style="display: flex; gap: 10px; justify-content: flex-end;">
                         <button class="btn btn-outline"><i class="fa-solid fa-envelope"></i> Message</button>
-                        <button class="btn btn-primary">Hire Now</button>
+                        <a href="payment.html" class="btn btn-primary" style="text-decoration: none;">Hire Now</a>
                     </div>
                 </div>
 
@@ -180,7 +180,7 @@
 
                     <div style="display: flex; gap: 10px; justify-content: flex-end;">
                         <button class="btn btn-outline"><i class="fa-solid fa-envelope"></i> Message</button>
-                        <button class="btn btn-primary">Hire Now</button>
+                        <a href="payment.html" class="btn btn-primary" style="text-decoration: none;">Hire Now</a>
                     </div>
                 </div>
 
