--- a/register.html
+++ b/register.html
@@ -73,7 +73,7 @@
                     </label>
                 </div>
 
-                <button type="button" class="btn btn-primary" onclick="window.location.href='index.html'">Create
+                <button type="button" class="btn btn-primary" onclick="window.location.href='verify-email.html'">Create
                     Account</button>
             </form>
 
