--- a/settings.html
+++ b/settings.html
@@ -161,6 +161,28 @@
                     </div>
 
                     <div style="margin-bottom: 20px;">
+                        <label style="display: block; font-weight: 700; margin-bottom: 8px;">Identity Verification
+                            (KYC)</label>
+                        <div
+                            style="display: flex; align-items: center; justify-content: space-between; padding: 15px; border: 1px solid #ddd; border-radius: 8px; background: #f8f9fa;">
+                            <div style="display: flex; align-items: center; gap: 10px;">
+                                <div
+                                    style="width: 40px; height: 40px; background: #e8f5e9; color: #2e7d32; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                                    <i class="fa-solid fa-shield-halved"></i>
+                                </div>
+                                <div>
+                                    <div style="font-weight: 700; font-size: 0.95rem;">Verify Your Identity</div>
+                                    <div style="font-size: 0.8rem; color: #666;">Unlock higher limits and trust badges.
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="verify-identity.html" class="btn btn-outline"
+                                style="font-size: 0.85rem; padding: 6px 15px; text-decoration: none;">Start
+                                Verification</a>
+                        </div>
+                    </div>
+
+                    <div style="margin-bottom: 20px;">
                         <label style="display: block; font-weight: 700; margin-bottom: 8px;">Skills <span
                                 style="font-weight: 400; color: #888;">(Comma separated)</span></label>
                         <input type="text" value="Java, Spring Boot, React, PostgreSQL, AWS, Docker, Figma"
